--- a/frontend/invoicemanagement-app/src/components/GetInvoices/SingleInvoice.css
+++ b/frontend/invoicemanagement-app/src/components/GetInvoices/SingleInvoice.css
@@ -17,6 +17,18 @@
   padding-bottom: 1rem;
 }
 
+.invoice-status-tag {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background-color: #e0e0e0;
+  color: #333;
+  font-weight: bold;
+  padding: 4px 12px;
+  border-radius: 20px;
+}
+
+
 .left-info {
   flex: 1;
 }
