--- a/frontend/invoicemanagement-app/src/components_css/SingleInvoice.css
+++ b/frontend/invoicemanagement-app/src/components_css/SingleInvoice.css
@@ -19,16 +19,39 @@
 
 .invoice-status-tag {
   position: absolute;
-  top: 20px;
-  left: 20px;
-  background-color: #e0e0e0;
-  color: #333;
+  top: 120px;
+  left: 310px;
+  background: darkorange;
+  color: white;
+  padding: 0.5rem 1.5rem;
+  transform: rotate(-45deg);
+  transform-origin: top left;
   font-weight: bold;
-  padding: 4px 12px;
-  border-radius: 20px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+  font-size: 0.85rem;
+  z-index: 10;
 }
 
+.download-btn-wrapper {
+  text-align: right;
+  margin: 1rem 2rem;
+}
 
+.download-btn {
+  background: #007acc;
+  color: white;
+  padding: 0.6rem 1.2rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  transition: background 0.3s ease;
+}
+
+.download-btn:hover {
+  background: #005fa3;
+}
 .left-info {
   flex: 1;
 }
@@ -36,6 +59,9 @@
 .left-info h2 {
   margin-bottom: 0.5rem;
   font-size: 1.3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .right-info {
@@ -126,3 +152,4 @@
   font-weight: bold;
   font-size: 1.2rem;
 }
+
