yaml files and db files

--- a/frontend/invoicemanagement-app/src/App.css
+++ b/frontend/invoicemanagement-app/src/App.css
@@ -124,6 +124,11 @@ th {
   color: #a30000;
 }
 
+.error-text {
+  color: red;
+  font-size: 13px;
+  margin-top: 4px;
+}
 
 /* Unordered list inside table cell */
 ul {
